@@ -7,6 +7,9 @@ SET(YARP_LIBRARIES "@YARP_LIBRARIES@" CACHE INTERNAL "Libraries needed for YARP"
 SET(YARP_INCLUDES "@YARP_INCLUDES@" CACHE INTERNAL "Include directories needed for YARP")
 SET(YARP_DEFINES "@YARP_DEFINES@" CACHE INTERNAL "Definitions needed for YARP")
 
+SET(CREATE_DEVICE_LIBRARY_MODULES @CREATE_DEVICE_LIBRARY_MODULES@)
+SET(MERGE_DEVICE_LIBRARY_MODULES @MERGE_DEVICE_LIBRARY_MODULES@)
+
 LINK_LIBRARIES(${YARP_LIBRARIES})
 INCLUDE_DIRECTORIES(${YARP_INCLUDES})
 ADD_DEFINITIONS(${YARP_DEFINES})
@@ -24,6 +27,13 @@ ENDIF (NOT yarpmod_DIR)
 IF (EXISTS ${YARP_MODULE_PATH}/YarpDevice.cmake)
   INCLUDE(YarpDevice)
 ENDIF (EXISTS ${YARP_MODULE_PATH}/YarpDevice.cmake)
+
+# merge device modules if desired
+IF (CREATE_DEVICE_LIBRARY_MODULES)
+  IF (MERGE_DEVICE_LIBRARY_MODULES)
+    LINK_LIBRARIES(yarpmod)
+  ENDIF (MERGE_DEVICE_LIBRARY_MODULES)
+ENDIF (CREATE_DEVICE_LIBRARY_MODULES)
 
 SET (YARP_FOUND TRUE)
 ENDIF (NOT YARP_FOUND)
