@@ -377,6 +377,12 @@ IF (COMPILING_ALL_YARP)
    AUX_SOURCE_DIRECTORY(harness harnesscode)
    ADD_EXECUTABLE(harness_${postfix} ${harnesscode})
    TARGET_LINK_LIBRARIES(harness_${postfix} YARP_dev ${YARP_EXTMOD_TARGETS} ${YARP_dev_EXT_LIBS} ${ACE_LINK_FLAGS} YARP_sig YARP_OS)
+   IF (CREATE_DEVICE_LIBRARY_MODULES)
+     IF (MERGE_DEVICE_LIBRARY_MODULES)
+       TARGET_LINK_LIBRARIES(harness_${postfix} yarpmod)
+     ENDIF (MERGE_DEVICE_LIBRARY_MODULES)
+   ENDIF (CREATE_DEVICE_LIBRARY_MODULES)
+   TARGET_LINK_LIBRARIES(harness_${postfix} YARP_dev ${YARP_EXTMOD_TARGETS} ${YARP_dev_EXT_LIBS} ${ACE_LINK_FLAGS} YARP_sig YARP_OS)
    GET_TARGET_PROPERTY(EXEC harness_${postfix} LOCATION)
    
   # add in standard tests
